--- a/pvg/index.html
+++ b/pvg/index.html
@@ -35,7 +35,7 @@
         </div>
 
         <nav id="main-nav">
-            <img class="fa-bars" src="img/bars-solid.svg">
+            <img class="fa-bars" src="../img/bars-solid.svg">
             <ul>
                 <a href="..\index.html#home"><li>Startseite</li></a>
                 <a href="..\index.html#tools"><li>Tools</li></a>
@@ -105,7 +105,7 @@
 
 
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
-    <script src="js/mobile-menu.js"></script>
+    <script src="../js/mobile-menu.js"></script>
 
 </body>
 </html>
