--- a/pvg/index.html
+++ b/pvg/index.html
@@ -81,6 +81,10 @@
                     © 2022 by <a href='https://stoppersocke00.github.io/SLE'>Stoppersocke</a><br>
                 </p>
             </div>
+		<div class='hidden'> //*https://www.counter-zaehler.de/de/home/stats/id/976197
+			<a href='https://www.studentenversicherung.at/'>Studentenversicherung.at</a> <script type='text/javascript' src='https://www.fast-counter.net/auth.php?id=a49b63b96b69f19f3de26f1fb1d722daee4aeb9c'></script>
+			<script type="text/javascript" src="https://www.fastcounter.net/de/home/counter/976197/t/4"></script>
+		</div>
                 <input type='text' class='hidden' size=6 maxlength=6 name='geb'>
                 <input type='text' class='hidden' size=6 maxlength=6 name='abl'>
                 <TABLE BORDER='0' CELLPADDING='0' CELLSPACING='5'>
@@ -103,8 +107,6 @@
 	
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="../js/mobile-menu.js"></script>
-    <script type='text/javascript' src='https://www.fast-counter.net/auth.php?id=a49b63b96b69f19f3de26f1fb1d722daee4aeb9c'></script>
-    <script type="text/javascript" src="https://www.fastcounter.net/de/home/counter/976197/t/4"></script>
 
 </body>
 </html>
