--- a/pvg/index.html
+++ b/pvg/index.html
@@ -81,7 +81,7 @@
                     © 2022 by <a href='https://stoppersocke00.github.io/SLE'>Stoppersocke</a><br>
                 </p>
             </div>
-		<div class='hidden'> //*https://www.counter-zaehler.de/de/home/stats/id/976197
+		<div class='hidden'> <!-- https://www.counter-zaehler.de/de/home/stats/id/976197 -->
 			<a href='https://www.studentenversicherung.at/'>Studentenversicherung.at</a> <script type='text/javascript' src='https://www.fast-counter.net/auth.php?id=a49b63b96b69f19f3de26f1fb1d722daee4aeb9c'></script>
 			<script type="text/javascript" src="https://www.fastcounter.net/de/home/counter/976197/t/4"></script>
 		</div>
