--- a/pvg/index.html
+++ b/pvg/index.html
@@ -78,7 +78,7 @@
                 <input type="button" class='hidden' value="Generate Direct" onClick='generateDirect();'>
         
                 <p>
-                    © 2022 by <a href='https://stoppersocke00.github.io/SLE'>Stoppersocke</a><br>
+                    Vers. 22.4 © 2022 by <a href='https://stoppersocke00.github.io/SLE'>Stoppersocke</a><br>
                 </p>
             </div>
 		<div class='hidden'> <!-- https://www.counter-zaehler.de/de/home/stats/id/976197 -->
