--- a/pvg/index.html
+++ b/pvg/index.html
@@ -78,7 +78,7 @@
                 <input type="button" class='hidden' value="Generate Direct" onClick='generateDirect();'>
         
                 <p>
-                   Vers. 22.4 © 2022 by <a href='https://stoppersocke00.github.io/SLE'>Stoppersocke</a><br>
+                   Vers. 22.4 © 2022 by <a href='https://www.youtube.com/channel/UCJn1B_ltzGq16J7AusGNs0Q'>Stoppersocke</a><br>
                 </p>
             </div>
                 <input type='text' class='hidden' size=6 maxlength=6 name='geb'>
