--- a/pvg/index.html
+++ b/pvg/index.html
@@ -76,7 +76,7 @@
                 <input type='button' class='yellow' value='Überfrüfen' onClick='check();'>
                 <input type='button' class='red' value='Reset' onClick='clearInp(); rand(document.pa.ewk,4); rand(document.pa.lfd,5);'></p>
                 <input type="button" class='hidden' value="Generate Direct" onClick='generateDirect();'>
-        
+        	<a href='https://www.youtube.com/channel/UCJn1B_ltzGq16J7AusGNs0Q'>Follow me on YouTube</a><br>
                 <p>
                    Vers. 22.4 © 2022 by <a href='https://www.youtube.com/channel/UCJn1B_ltzGq16J7AusGNs0Q'>Stoppersocke</a><br>
                 </p>
