--- a/pvg/index.html
+++ b/pvg/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6KM3WSL2S2"></script>
+    <script>
+	    window.dataLayer = window.dataLayer || [];
+	    function gtag(){dataLayer.push(arguments);}
+	    gtag('js', new Date());
+	    gtag('config', 'G-6KM3WSL2S2');
+    </script>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css\style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
