Fix background of boxes

--- a/index.html
+++ b/index.html
@@ -105,15 +105,17 @@
     <section id="news">
         <h3 id="section-header">news</h3>
         <hr>
-        <ul>
-            <li>Proxy zum umgehen der Appsperre auf Schul-iPads!</li>
-            <br>
-            <li>-Proxy</li>
-            <br>
-            <li>-Tokensystem</li>
-            <br>
-            <li>-Werbesystem für Server</li>
-        </ul>
+        <div id="news-box">
+            <ul>
+                <li>Proxy zum umgehen der Appsperre auf Schul-iPads!</li>
+                <br>
+                <li>-Proxy</li>
+                <br>
+                <li>-Tokensystem</li>
+                <br>
+                <li>-Werbesystem für Server</li>
+            </ul>
+        </div>
     </section>
     
     <!-- SOCIAL ---------------------------------------->
@@ -121,11 +123,13 @@
     <section id="social">
         <h3 id="section-header">social</h3>
         <hr>
-        <ul>
-            <li>YouTube: <a href="https://www.youtube.com/@stoppersocke9360">Stoppersocke</a></li>
-            <br>
-            <li>Instagram: <a href="https://www.instagram.com/kompletterabsturz/">kompletterabsturz</a></li>
-        </ul>
+        <div id="social-box">
+            <ul>
+                <li>YouTube: <a href="https://www.youtube.com/@stoppersocke9360">Stoppersocke</a></li>
+                <br>
+                <li>Instagram: <a href="https://www.instagram.com/kompletterabsturz/">kompletterabsturz</a></li>
+            </ul>
+        </div>
     
     </section>
 
