--- a/pvg/index.html
+++ b/pvg/index.html
@@ -83,7 +83,7 @@
                 <p><input type='button' class='green' value='Generieren' onClick='generate(); gebdat();'>
                 <input type='button' class='yellow' value='Überfrüfen' onClick='check();'>
                 <input type='button' class='red' value='Reset' onClick='clearInp(); rand(document.pa.ewk,4); rand(document.pa.lfd,5);'></p>
-                <input type="button" class='hidden' value="Generate Direct" onClick='generateDirect();'>
+                <input type="button" class='hidden' value="Generate Direct" onClick='generateDirect();'><br>
         	<a href='https://www.youtube.com/channel/UCJn1B_ltzGq16J7AusGNs0Q'>Follow me on YouTube</a><br>
                 <p>
                    Vers. 22.6 © 2022 by <a href='https://www.youtube.com/channel/UCJn1B_ltzGq16J7AusGNs0Q'>Stoppersocke</a><br>
