--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <section id="home">
        <hr id="homehr">
        <h1>Stoppersocke</h1>
-       <h2>bypass your/e self</h2>
+       <h2>Sobald du eine Lücke in einem System kennst, sind Sicherheitsmaßnahmen in diesem für dich sinnlos.</h2>
         <a href="#tools">
             <img src="img\pfeil.png" alt="pfeil">
         </a>
